2005-12-06 Erik Sandberg  <mandolaerik@gmail.com>

	* scm/music-functions.scm: Make phrasing slurs follow voice direction

	* scripts/lilypond-book.py: Introduce option
        --preserve-line-breaks, for usage with srcltx

2005-12-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-lib.scm (print-circled-text-callback): draw circle
	around text using make-circle-markup.

	* Documentation/user/*: strip out-www from paths.

2005-12-05  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/user/lilypond.tely (direntry): remove empty lines;
	fixes invalid info entry issue with makeinfo 4.8 in debian sid.

2005-12-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/GNUmakefile: idem.

	* Documentation/user/macros.itexi: strip out-www

	* python/rational.py: python 2.3 compat.

	* VERSION (PATCH_LEVEL): release 2.7.21

	* scripts/musicxml2ly.py (NonDentedHeadingFormatter.format_headi):
	option formatting, lilypond style.

	* python/musicexp.py: grab from Ikebana: a library for composing
	ly music expressions. 
	(Output_printer): class for advanced .ly printing.
	(eg. tupletting) 

	* python/musicxml.py: new file. Read MusicXML MiniDOM tree, and
	convert to pythonesque structure.

	* python/rational.py: PD rational number class.

	* Documentation/user/converters.itely (Invoking musicxml2ly):  new node.

2005-12-04  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/part-combine-iterator.cc: Minor bugfix
	
	* THANKS: Update bughunters

2005-12-02  Werner Lemberg  <wl@gnu.org>

	* mf/README: Document process for proper mf2pt1 conversion.

	* mf/feta-beugel.mf (draw_brace): Fix path to assure clean
	overlapping.

	* mf/feta-harmonica.mf: Removed.  Unused.

2005-12-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (do_file): fix thinkos.

2005-12-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/GNUmakefile ($(outdir)/FlexLexer.h):
	($(outdir)/parser.cc): 
	($(outdir)/lexer.cc): Bugfix: depend on config.h.
